<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_poster"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius_bottom_left="30dp"
        app:riv_corner_radius_bottom_right="30dp"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tv_detail_title"
        style="@style/TextContent.Title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_detail_date"
        style="@style/TextContent.SubText"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
        tools:ignore="TextContrastCheck"
        tools:text="@string/release_date" />

    <TextView
        android:id="@+id/tv_detail_genre"
        style="@style/TextContent"
        android:layout_marginTop="8dp"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_date"
        tools:text="@string/genres" />

    <TextView
        android:id="@+id/tv_detail_duration"
        style="@style/TextContent.SubText"
        android:layout_marginStart="16dp"
        android:gravity="start"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
        tools:text="@string/duration" />

    <TextView
        android:id="@+id/tv_detail_rate"
        style="@style/TextContent.SubTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:drawablePadding="4dp"
        app:drawableStartCompat="@drawable/star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
        tools:text="@string/rating_placeholder" />

    <TextView
        android:id="@+id/tv_detail_overview"
        style="@style/TextContent.SubTitle"
        android:layout_marginTop="8dp"
        android:text="@string/overview"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_genre"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre" />

    <TextView
        android:id="@+id/tv_detail_description"
        style="@style/TextContent"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_overview"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview"
        tools:text="@string/description_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>