<resources>
    <string name="app_name">The Movie Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Title</string>
    <string name="rating_placeholder">%d / 100</string>
    <string name="release_date">Release Date</string>
    <string name="genres">Genres</string>
    <string name="description_placeholder">Description</string>
    <string name="duration">Duration</string>
    <string name="overview">Overview</string>
</resources>