...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_0dp"
                    android:background="@color/black_60"
                    android:contentDescription="@string/poster_image"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/content"
        app:layout_anchorGravity="center|top|center_vertical" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/fav_button"
...
