<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favourite_white"
        android:title="@string/favourites"
        app:showAsAction="always" />
</menu>